@@ -1,7 +1,7 @@
-Mesmer v0.1 compiled: -- Aug 29 2008 -- 11:16:50
+Mesmer v0.1 compiled: -- Aug 29 2008 -- 18:13:51
 
 Parsing input xml file... 
-OH_acetylene_association_test.xml at 20080829_123321
+OH_acetylene_association_test.xml at 20080829_181626
 Parsing reaction R1...
 The description element or attribute was missing or empty.
 Cannot find argument me:frequenciesScaleFactor
@@ -37,14 +37,14 @@ The me:precision element or attribute was missing or empty.
 The me:MaximumEvolutionTime element or attribute was missing or empty.
 
 File: "OH_acetylene_association_test.xml" successfully parsed.
-Calculate EGME at 20080829_123321
+Calculate EGME at 20080829_181626
 
 Now calculating...
 OH_acetylene_association_test.xml
-Write XML attribute at 20080829_123321
+Write XML attribute at 20080829_181626
 PT Grid 
 0
-Build Collison Operator at 20080829_123321
+Build Collison Operator at 20080829_181626
 Cell number = 
 15950
 , Grain number = 
@@ -65,19 +65,19 @@ m_scaleFactor was not defined but requested in TS_1a. Default value 1 is given.
 20 values in the FFT convolution routine were replaced by standard convolution
 
 20 values in the FFT convolution routine were replaced by standard convolution
-Diagonlize Collision Operator at 20080829_123348 -- Time elapsed: 0 seconds.
+Diagonlize Collision Operator at 20080829_181637 -- Time elapsed: 0 seconds.
 
-Finish Calculation at 20080829_123432 -- Time elapsed: 27 seconds.
+Finish Calculation at 20080829_181656 -- Time elapsed: 11 seconds.
 In total, 1 temperature/concentration-pressure points calculated.
 
 Time stamps:
-20080829_113321 -- Build Collison Operator
-20080829_113348 -- Diagonlize Collision Operator
-20080829_113432 -- Finish Calculation
+20080829_171626 -- Build Collison Operator
+20080829_171637 -- Diagonlize Collision Operator
+20080829_171656 -- Finish Calculation
  *Info in main
-Save XML document to a new file at 20080829_123432 -- Total time elapsed: 71 seconds.
+Save XML document to a new file at 20080829_181656 -- Total time elapsed: 30 seconds.
 
-System saved to OH_acetylene_association_test.20080829_123432.xml
+System saved to OH_acetylene_association_test.20080829_181656.xml
 m_Mass is provided but not used in OCHCH2
 Rotational constants are provided but not used in OCHCH2
 m_Sym is provided but not used in OCHCH2
