@@ -23,14 +23,14 @@ namespace mesmer
     m_pMoleculeManager(pMoleculeManager),
     m_pMicroRateCalculator(NULL),
     m_pTunnelingCalculator(NULL),
-    m_forwardCanonicalRate(0.0),
-    m_backwardCanonicalRate(0.0),
     m_FluxGrainZPE(0.0),
     m_FluxCellOffset(0),
     m_CellTSFlux(),
     m_GrainTSFlux(),
     m_GrainKfmc(),
     m_GrainKbmc(),
+    m_forwardCanonicalRate(0.0),
+    m_backwardCanonicalRate(0.0),
     m_Env(Env),
     m_Name(id),
     TSFluxStartIdx(0),
