@@ -1,3 +1,9 @@
+2008-8-29 Dave Glowacki
+
+* fixed a bug in testRateConstant() routine in irreversible exchange reaction class which did not reset the canonical loss rate to 0 in a grid search
+* changed reaction class member data m_forwardCanonicalRate and m_backwardCanonicalRate from protected to private, added set and get functions for
+  this member data, and made appropriate changes to other derived reaction classes
+
 _2008_08_29__11_45_44_ Chi-Hsiu Liang
 
   * Removed Overloading of countCellDOS() in ClassicalRotor and update baselines.
